--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "font-awesome": "^4.7.0",
     "react": "18.2.0",
     "react-native": "0.72.0",
+    "react-native-gesture-handler": "^2.12.0",
     "react-native-gifted-chat": "^2.4.0",
     "react-native-paper": "^5.9.0",
     "react-native-safe-area-context": "^4.6.3",
